# web-server

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: cli.rs  main.rs
html/: sleep.html
server/: Cargo.toml
server/src/: lib.rs
