[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.81.0"
repository = "https://github.com/volodymyrd/web-server"

[workspace]
resolver = "2"
members = ["cli", "server"]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# internal
cli = { path = "cli" }
server = { path = "server" }
